2000-05-28  Joseph S. Myers  <jsm28@cam.ac.uk>

	* adventure/Makefile.bsd, adventure/main.c,
	arithmetic/arithmetic.c, atc/main.c, backgammon/backgammon/main.c,
	backgammon/teachgammon/teach.c, battlestar/battlestar.c,
	bcd/bcd.c, boggle/boggle/bog.c, caesar/caesar.c, caesar/rot13.in,
	canfield/canfield/canfield.c, canfield/cfscores/cfscores.c,
	cribbage/crib.c, fish/fish.c, fortune/datfiles/netbsd,
	gomoku/main.c, hack/hack.termcap.c, hangman/main.c, mille/mille.c,
	mille/misc.c, mille/print.c, monop/cards.inp, monop/monop.c,
	morse/morse.c, phantasia/Makefile.bsd, phantasia/fight.c,
	phantasia/misc.c, ppt/ppt.c, quiz/quiz.c, robots/main.c,
	robots/score.c, snake/snake/snake.c, snake/snscore/snscore.c,
	tetris/screen.c, tetris/screen.h, trek/main.c, worm/worm.c,
	wump/wump.c: Update from NetBSD CVS.

2000-05-27  Joseph S. Myers  <jsm28@cam.ac.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2000-05-06  Joseph S. Myers  <jsm28@cam.ac.uk>

	* bsd-games now under CVS version control.  At present there is no
	anoncvs access, so this isn't particularly relevant to anyone else
	yet.  The CVS tree up to now has been generated with scripts based
	on RCS to include all past releases and betas from 1.3 onwards,
	and those snapshots of the bsd-games source tree from in between
	releases that I have, with checkin dates set to the dates of the
	ChangeLogs in the respective releases and snapshots.  Tags used
	are BSD_GAMES_DATE_yyyy_mm_dd for dated snapshots; BSD_GAMES_v_v
	for versioned bsd-games releases; BSD_GAMES_NON_FREE_v_v for
	bsd-games-non-free releases; and BSD_GAMES_VERSION_v_v for the
	union of corresponding bsd-games and bsd-games-non-free releases,
	and for bsd-games releases before the split, but this tag was not
	applied where no bsd-games-non-free release corresponded to a
	particular bsd-games release.

2000-04-26  Joseph S. Myers  <jsm28@cam.ac.uk>

	* bsd-games.lsm, bsd-games-non-free.lsm: Update to LSM format
	version 4.
