@@ -55,4 +55,4 @@ and
 .Xr wc 1
 instead, though these are not shell builtins.
 .Sh SEE ALSO
-.Xr from 1 .
+.Xr from 1
