@@ -7780,8 +7780,8 @@ It's just a jump to the left
 	And then a step to the right.
 Put your hands on your hips
 	And pull your knees in tight.
-It's the pelvic thrust
-	That really gets you insa-a-a-a-ane
+But it's the pelvic thrust
+	That really drives you insa-a-a-a-a-ane!
 
 	LET'S DO THE TIME WARP AGAIN!
 
