@@ -518,9 +518,6 @@ NetBSD: Write Once, Run Everywhere. Java optional.
 NetBSD: You can't handle it.
 		-- Paul Newhouse
 %
-NetBSD/sparc: less Lovelaces in your LX?
-		-- Jim Wise
-%
 Never mind the bollocks, here's NetBSD.
 		-- Julian Assange
 %
@@ -540,4 +537,9 @@ Where would you have rather been today, tomorrow? NetBSD.
 %
 With many thanks to the core team and UCB CSRG.
 		-- Greywolf
+%
+NetBSD: Abandon all hype, oh ye who enter here.
+%
+NetBSD: Ports to * boards.
+		-- Steve Woodford
 %
