@@ -1,4 +1,4 @@
-/*	$NetBSD: setup.c,v 1.6 1999/07/21 13:19:11 hubertf Exp $	*/
+/*	$NetBSD: setup.c,v 1.7 2000/07/03 03:57:44 matt Exp $	*/
 
 /*
  * Copyright (c) 1980, 1993
@@ -38,12 +38,13 @@
 #if 0
 static char sccsid[] = "@(#)setup.c	8.1 (Berkeley) 5/31/93";
 #else
-__RCSID("$NetBSD: setup.c,v 1.6 1999/07/21 13:19:11 hubertf Exp $");
+__RCSID("$NetBSD: setup.c,v 1.7 2000/07/03 03:57:44 matt Exp $");
 #endif
 #endif /* not lint */
 
 #include <stdio.h>
 #include <math.h>
+#include <string.h>
 #include <unistd.h>
 #include <stdlib.h>
 #include <err.h>
